# CI-CD

./: CMakeLists.txt  README.md  circle.py  test_triangle.py  triangle.py
.github/workflows/: main.yml
geom2d/: __init__.py
tests/: test_circle.py
